added rest of code

--- a/efworkshop.api/appsettings.json
+++ b/efworkshop.api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Host=manny.db.elephantsql.com; Database=cjguhuyh; Username=cjguhuyh; Password=8DN0boqXaBzuniEhumVFQAKsvXttOnsJ; "
+  }
 }
