--- a/efworkshop.api/appsettings.json
+++ b/efworkshop.api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString": "Host=manny.db.elephantsql.com; Database=cjguhuyh; Username=cjguhuyh; Password=8DN0boqXaBzuniEhumVFQAKsvXttOnsJ; "
+    "DefaultConnectionString": "Host=CHANGE; Database=CHANGE; Username=CHANGE; Password=CHANGE;"
   }
 }
